# esp32-c3_matter

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1
main/: CMakeLists.txt  app_main.c  device_state.h  idf_component.yml  main_dummy.c  matter_mgr.h
main/app/: app_main.c
main/core/: cfg_json.c  modules.h
main/drivers/: reset_btn.c  reset_btn.h
main/modules/pwm/: mod_pwm.c
main/modules/relay/: mod_relay.c  mod_relay.h
main/modules/ws2812/: mod_ws2812.c  mod_ws2812.h
main/net/: dns_server.c  dns_server.h  web_server.c  web_server.h  wifi_mgr.h
src/: CMakeLists.txt  app_config.h  app_loop.c  app_loop.h  app_main.c  app_watchdog.c  app_watchdog.h  cfg.c  cfg.h  cfg_json.h  device_state.c  dns_server.c  idf_component.yml  matter_mgr.c  matter_mgr.cpp  matter_mgr.h  mod_ws2812.h  modules.c  reset_btn.c  web_server.c  web_server.h  wifi_mgr.c  wifi_mgr.h
src/app/: app_main.c
src/config/profiles/: pwm_1ch.h  relay_1ch_button_1.h  relay_2ch.h  ws2812b_basic.h
src/core/: cfg_json.c  cfg_json.h  modules.c  modules.h  system_log.c  system_log.h
src/drivers/: reset_btn.c
src/modules/pwm/: mod_pwm.h
src/modules/relay/: mod_relay.c  mod_relay.h
src/modules/ws2812/: mod_ws2812.c
src/net/: dns_server.c  mqtt_mgr.c  mqtt_mgr.h  web_server.c  web_ui.h  wifi_mgr.c  wifi_mgr.h
src/third_party_overrides/app/data-model/: Nullable.h
